--- a/Student.html
+++ b/Student.html
@@ -113,6 +113,6 @@
     <section><ul><b>Achievements</b>
     <li>Diploma College Topper</li>
     <li>Experinced design Engineer</li>
-</ul></section> &#0153;&copy;
+</ul></section> &#0153;&copy;&trade;
 </body>
 </html>
