--- a/Student.html
+++ b/Student.html
@@ -35,7 +35,7 @@
     <Hr></Hr>
     <h2>Contact Details</h2>
     <ul>
-        <li>Mobile NO - 8924099147</li>
+        <li>Mobile NO - 8924******</li>
         <li>Email Id - amankrmaurya83@gmail.com </li>
         <li>Instagram Id - <a href="https://www.instagram.com/amanmaurya4444">amanmaurya4444</a></li>
         <li><a href="http://www.linkedin.com/in/aman-maurya-4b9563217">Linkdin</a></li>
