--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> Cybrom </title>
 <body>
-    <P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html">Network error</a>Home</span> <span
+    <P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html"></a>Home</span> <span
             style="margin-left: 2%;">Viwe</span><span style="margin-left: 2%;">Shopping</span><span
             style="margin-left: 2%;">Maps</span><span style="margin-left: 2%;">Images</span><span
             style="margin-left: 2%;"><Video></span></span></P>
