--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
          <input type="checkbox"> C#
     </form> <input type="time">
 <br><br><input type="submit" value="Login">
+<h1>CSS classes</h1>
+<p style="font-size:medium; color: blue; letter-spacing: 10px;">Hello Aman</p>
+<h1 style="background-color: aqua; word-spacing: 20px;"> <i>Aman Kaise ho</i></h1>
+
 </body>
 </head>
 
