--- a/index.html
+++ b/index.html
@@ -1,126 +1,136 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title> Cybrom </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        p{
+            color:antiquewhite; font-size: small;
+            border: 2px solid black;
+        }
+        #he{
+            color: red;
+            font-size:50%;
+        }
+    </style>
+</head>
 <body>
     <P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html"></a>Home</span> <span
-            style="margin-left: 2%;">Viwe</span><span style="margin-left: 2%;">Shopping</span><span
-            style="margin-left: 2%;">Maps</span><span style="margin-left: 2%;">Images</span><span
-            style="margin-left: 2%;"><Video></span></span></P>
-                <hr/>
-    <h1> <p><span style="background-color: aqua;">Welcome to the coding world </span></p>
-    </h1> <!-- Block Elements :- h1..h6 p -->
-    <!--It takes full width and starts from new line -->
-    <ul>
-        <h2> <b>CITY NAME</b></h2>
-        <li><b><u>
-                    <h3>Lucknow</h3>
-                </u></b>
-            <p> "There are some places which are very famous in own way " <br> <span style="color: blue ;">➡️You all
-                    must visit once in a life⬅️</span> </p>
-            <ul type="square">
-                <li>Hazaratganj <a
-                        href="https://www.bing.com/maps?q=hazratganj+lucknow&FORM=HDRSC6&cp=26.850373%7E80.94791&lvl=15.1"> 
-                        Direction </a> <p><video width="150px" height="150px" control poster="Lucknow.jpg"source src="hazratganj-lucknow-night-view-lucknow-720-publer.io.mp4" controls muted width="250px" height="250"></video></p></li>
-                <p><img src="Hazaratganj.jpg" alt="Network error" width="250px" height="250px"></abbr></p>
-                <li>Aminabhad <a
-                        href=https://www.bing.com/maps?q=aminabhad++lucknow+university&FORM=HDRSC6&cp=26.858175%7E80.937167&lvl=16.7">Direction</a>
-                    <p><img src="aminabhad.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>Charbagh <a
-                        href="https://www.bing.com/maps?q=charbagh+lucknow+&FORM=HDRSC6&cp=26.826585%7E80.914773&lvl=16.1">
-                        Direction </a>
-                    <p><img src="Charbagh.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-            </ul>
-        </li>
-        <li><b><u>
-                    <h3>Kanpur</h3>
-                </u></b>
-            <p> "These places are historic places that's the reason these places are famous " <br> <span
-                    style="color: blue ;"> ➡️You all must visit Panki dham once in a life⬅️</span> </p>
-            <ul type="square">
-                <li>Swaroop nagar <a
-                        href="https://www.bing.com/maps?q=swaroop+nagar+kanpur&FORM=HDRSC6&cp=26.481521%7E80.314221&lvl=16.0">
-                        Direction</a>
-                    <p><img src="Swaroop nagar.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>Panki dham <a href="https://www.bing.com/maps?q=Panki+dham+kanpur&FORM=HDRSC6"> Direction</a>
-                    <p><img src="panki dham.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>Ganga revier <a href="https://www.bing.com/maps?q=ganga+barrage+kanpur&FORM=HDRSC6"> Direction</a>
-                    <p><img src="ganaga.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-            </ul>
-        </li>
-        <li><b><u>
-                    <h3>Bhopal</h3>
-                </u></b>
-            <p> "Bhopal is very natural friendly city " <br> <span style="color: blue ;"> ➡️Nature lover must visit once
-                    in a life⬅️</span> </p>
-            <ul type="square">
-                <li>MANIT <a href="https://www.bing.com/maps?q=manit+bhopal+&FORM=HDRSC6&cp=23.21370"> Direction</a>
-                    <p><img src="MANIT.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>MP nagar <a
-                        href="https://www.bing.com/maps?q=MP+nagar+bhopal+&FORM=HDRSC6&cp=23.23827%7E77.435954&lvl=16.0">
-                        Direction</a>
-                    <p><img src="MP nagar.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>Awadhpuri <a
-                        href="https://www.bing.com/maps?q=awadhpuri+nagar+bhopal+&FORM=HDRSC6&cp=23.231833%7E77.488825&lvl=15.3">
-                        Direction</a>
-                    <p><img src="Awadhpuri.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-            </ul>
-        </li>
-        <li><b><u>
-                    <h3>Jabalpur</h3>
-                </u></b>
-            <p> "Jabalpur basically famous for his waterfalls " <br> <span style="color: blue ;"> ➡️Who's Love nature
-                    and waterfalls msut visit once in a life⬅️</span> </p>
-            <ul type="square">
-                <li>Jabalpur railway station <a
-                        href="https://www.bing.com/maps?q=jabalpur+railway+station&FORM=HDRSC6&cp=23.241346%7E77.541504&lvl=11.0">
-                        Direction</a>
-                    <p><img src="Jabalpur.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-                <li>Jabalpur waterfall <a href="https://www.bing.com/maps?q=jabalpur+dhuandhar+waterfall&FORM=HDRSC6">
-                        Direction</a>
-                    <p><img src="Jabalpur water fall.jpg" alt="Network error" width="250px" height="250px"></p>
-                </li>
-            </ul>
-        </li>
-    </ul>
-    <ol type="A">
-        <h2> <b>FAMOUS FOOD</b> </h2>
-        <li>Biryani <a href="https://www.tundaykababi.com/"> Oder link😊 </a></li>
-        <li>Khaste <a href="https://www.zomato.com/lucknow/bajpayee-kachodi-bhandar-hazratganj">Oder link😊</a> </li>
-        <li>Jalebi Poha <a href="https://www.zomato.com/lucknow/moti-mahal-hazratganj">Oder link😊</a></li>
-        <li>Papdi <a href="https://www.zomato.com/lucknow/royal-cafe-hazratganj">Oder link😊</a></li>
-    </ol>
-    <form>
-         Enter Your Name: &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter Your Name"><br><br>
-         Enter Your Email: &nbsp;&nbsp;&nbsp;&nbsp;<input type="Email">
-         <br><br>
-         Enter Your Number:   <input type="number"><br><br>
-         Enter Your DOB:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" required><br><br>
-         Gender: <input type="radio" name="gen"> Male 
-         <input type="radio"name="gen">Female 
-         <input type="radio"name="gen">Other <br><br>
-         Course : <br>
-         <input type="checkbox"> Java <br>
-         <input type="checkbox"> Python <br>
-         <input type="checkbox"> C++ <br>
-         <input type="checkbox"> MERN <br>
-         <input type="checkbox"> C#
-    </form> <input type="time">
+        style="margin-left: 2%;">Viwe</span><span style="margin-left: 2%;">Shopping</span><span
+        style="margin-left: 2%;">Maps</span><span style="margin-left: 2%;">Images</span><span
+        style="margin-left: 2%;"><Video></span></span></P>
+            <hr/>
+<h1> <p><span style="background-color: aqua;">Welcome to the coding world </span></p>
+</h1> <!-- Block Elements :- h1..h6 p -->
+<!--It takes full width and starts from new line -->
+<ul>
+    <h2> <b>CITY NAME</b></h2>
+    <li><b><u>
+                <h3>Lucknow</h3>
+            </u></b>
+        <p> "There are some places which are very famous in own way " <br> <span style="color: blue ;">➡️You all
+                must visit once in a life⬅️</span> </p>
+        <ul type="square">
+            <li>Hazaratganj <a
+                    href="https://www.bing.com/maps?q=hazratganj+lucknow&FORM=HDRSC6&cp=26.850373%7E80.94791&lvl=15.1"> 
+                    Direction </a> <p><video width="150px" height="150px" control poster="Lucknow.jpg"source src="hazratganj-lucknow-night-view-lucknow-720-publer.io.mp4" controls muted width="250px" height="250"></video></p></li>
+            <p><img src="Hazaratganj.jpg" alt="Network error" width="250px" height="250px"></abbr></p>
+            <li>Aminabhad <a
+                    href="https://www.bing.com/maps?q=aminabhad++lucknow+university&FORM=HDRSC6&cp=26.858175%7E80.937167&lvl=16.7">Direction</a>
+                <p><img src="aminabhad.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>Charbagh <a
+                    href="https://www.bing.com/maps?q=charbagh+lucknow+&FORM=HDRSC6&cp=26.826585%7E80.914773&lvl=16.1">
+                    Direction </a>
+                <p><img src="Charbagh.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+        </ul>
+    </li>
+    <li><b><u>
+                <h3>Kanpur</h3>
+            </u></b>
+        <p> "These places are historic places that's the reason these places are famous " <br> <span
+                style="color: blue ;"> ➡️You all must visit Panki dham once in a life⬅️</span> </p>
+        <ul type="square">
+            <li>Swaroop nagar <a
+                    href="https://www.bing.com/maps?q=swaroop+nagar+kanpur&FORM=HDRSC6&cp=26.481521%7E80.314221&lvl=16.0">
+                    Direction</a>
+                <p><img src="Swaroop nagar.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>Panki dham <a href="https://www.bing.com/maps?q=Panki+dham+kanpur&FORM=HDRSC6"> Direction</a>
+                <p><img src="panki dham.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>Ganga revier <a href="https://www.bing.com/maps?q=ganga+barrage+kanpur&FORM=HDRSC6"> Direction</a>
+                <p><img src="ganaga.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+        </ul>
+    </li>
+    <li><b><u>
+                <h3>Bhopal</h3>
+            </u></b>
+        <p> "Bhopal is very natural friendly city " <br> <span style="color: blue ;"> ➡️Nature lover must visit once
+                in a life⬅️</span> </p>
+        <ul type="square">
+            <li>MANIT <a href="https://www.bing.com/maps?q=manit+bhopal+&FORM=HDRSC6&cp=23.21370"> Direction</a>
+                <p><img src="MANIT.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>MP nagar <a
+                    href="https://www.bing.com/maps?q=MP+nagar+bhopal+&FORM=HDRSC6&cp=23.23827%7E77.435954&lvl=16.0">
+                    Direction</a>
+                <p><img src="MP nagar.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>Awadhpuri <a
+                    href="https://www.bing.com/maps?q=awadhpuri+nagar+bhopal+&FORM=HDRSC6&cp=23.231833%7E77.488825&lvl=15.3">
+                    Direction</a>
+                <p><img src="Awadhpuri.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+        </ul>
+    </li>
+    <li><b><u>
+                <h3>Jabalpur</h3>
+            </u></b>
+        <p> "Jabalpur basically famous for his waterfalls " <br> <span style="color: blue ;"> ➡️Who's Love nature
+                and waterfalls msut visit once in a life⬅️</span> </p>
+        <ul type="square">
+            <li>Jabalpur railway station <a
+                    href="https://www.bing.com/maps?q=jabalpur+railway+station&FORM=HDRSC6&cp=23.241346%7E77.541504&lvl=11.0">
+                    Direction</a>
+                <p><img src="Jabalpur.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+            <li>Jabalpur waterfall <a href="https://www.bing.com/maps?q=jabalpur+dhuandhar+waterfall&FORM=HDRSC6">
+                    Direction</a>
+                <p><img src="Jabalpur water fall.jpg" alt="Network error" width="250px" height="250px"></p>
+            </li>
+        </ul>
+    </li>
+</ul>
+<ol type="A">
+    <h2> <b>FAMOUS FOOD</b> </h2>
+    <li id="he" >Biryani <a href="https://www.tundaykababi.com/"> Oder link😊 </a></li>
+    <li>Khaste <a href="https://www.zomato.com/lucknow/bajpayee-kachodi-bhandar-hazratganj">Oder link😊</a> </li>
+    <li>Jalebi Poha <a href="https://www.zomato.com/lucknow/moti-mahal-hazratganj">Oder link😊</a></li>
+    <li>Papdi <a href="https://www.zomato.com/lucknow/royal-cafe-hazratganj">Oder link😊</a></li>
+</ol>
+<form>
+     Enter Your Name: &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Enter Your Name"><br><br>
+     Enter Your Email: &nbsp;&nbsp;&nbsp;&nbsp;<input type="Email">
+     <br><br>
+     Enter Your Number:   <input type="number"><br><br>
+     Enter Your DOB:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="date" required><br><br>
+     Gender: <input type="radio" name="gen"> Male 
+     <input type="radio"name="gen">Female 
+     <input type="radio"name="gen">Other <br><br>
+     Course : <br>
+     <input type="checkbox"> Java <br>
+     <input type="checkbox"> Python <br>
+     <input type="checkbox"> C++ <br>
+     <input type="checkbox"> MERN <br>
+     <input type="checkbox"> C#
+</form> <input type="time">
 <br><br><input type="submit" value="Login">
 <h1>CSS classes</h1>
-<p style="font-size:medium; color: blue; letter-spacing: 10px;">Hello Aman</p>
+<p>Hello Aman</p>
 <h1 style="background-color: aqua; word-spacing: 20px;"> <i>Aman Kaise ho</i></h1>
-
 </body>
-</head>
-
 </html>
