--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        p{
-            color:antiquewhite; font-size: small;
-            border: 2px solid black;
-        }
-        #he{
-            color: red;
-            font-size:50%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html"></a>Home</span> <span
