--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
      <input type="checkbox"> C#
 </form> <input type="time">
 <br><br><input type="submit" value="Login">
+<hr>
+<form action="https://www.youtube.com/results?search_query=nothing+phone+2a">
+    <input type="text" placeholder="Search in Youtube" name="search_query">
+    <input type="submit" value="Search">
+</form><hr>
 <div id="Am"><p><i>I am Aman maurya 
     I'm persuing B'tech</i>
 </p>
