--- a/airpnb/Practice.html
+++ b/airpnb/Practice.html
@@ -23,11 +23,22 @@
     </style>
 </head>
 <body>
-<div  id ="op">
+<!-- <div  id ="op">
  <div class="op1">
- </div>
+ </div> -->
     
 </div>
+<form>
+ <h1>Registraion Form</h1>
+ <input type="text" placeholder="First Name"> <input type="text" placeholder="Last Name"><br>
+Please select gender <select name="" id="">
+    <option value="Male">Male</option>
+    <option value="Female">Female</option>
+    <option value="Other">Other</option>
+</select><br>
+Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
+<button>Register</button>
+</form>
 
     
 </body>
