--- a/index.html
+++ b/index.html
@@ -121,10 +121,20 @@
 </form> <input type="time">
 <br><br><input type="submit" value="Login">
 <hr>
+<form action="https://www.google.co.in/search?q=nasa">
+    <input type="text" placeholder="Search on Google" name="searc?q" >
+    <input type="submit" value="Search">
+</form>
 <form action="https://www.youtube.com/results?search_query=nothing+phone+2a">
     <input type="text" placeholder="Search in Youtube" name="search_query">
-    <input type="submit" value="Search">
-</form><hr>
+    <input type="submit" value="Search"><br>
+    Select your valume range:- <br>
+   <div> <input type="range" min="0" max="100" step="10" value="70"></div>
+   <label for="feedback">Please write your valuble feedback:</label>
+   <textarea name="Feedback" id="Feedback" placeholder="write your feedback here" rows="5" cols="50">write your feedback</textarea>
+   <input type="submit" >
+</form>
+<hr>
 <div id="Am"><p><i>I am Aman maurya 
     I'm persuing B'tech</i>
 </p>
