--- a/airpnb/Practice.html
+++ b/airpnb/Practice.html
@@ -4,24 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        #op{
-            border: 1px solid black;
-            width: 350px;
-            height: 350px;
-            margin-top: 200px;
-            margin-left: 500px;
-
-        }
-        .op1{
-            border: 1px dotted red;
-            width: 100px;
-            height: 100px;
-           margin-top: 100px;
-           margin-left: 110px;
-        }
-        
-    </style>
     <link rel="stylesheet" href="Practice.css">
 </head>
 <body>
@@ -46,7 +28,7 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
 <button>Need Help</button>
 <h1>Cybrom</h1><hr> -->
 
-<br><br>
+<!-- <br><br>
 <h1 id="Qu">Quora </h1> 
 <form action="username" id="User">
     <input type="text" placeholder="username">
@@ -84,7 +66,12 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
     h2{
       color: brown;
     }
-</p>
+
+</p> -->
+<div id="main"><div id="op"></div>
+<div id="op1"></div>
+ <span>hello</span>
+</div>
 </body>
 </html>
 
