--- a/Practice.html
+++ b/Practice.html
@@ -28,7 +28,7 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
 <button>Need Help</button>
 <h1>Cybrom</h1><hr> -->
 
-<!-- <br><br>
+<br><br>
 <h1 id="Qu">Quora </h1> 
 <form action="username" id="User">
     <input type="text" placeholder="username">
@@ -39,20 +39,20 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
         <li><a href="">Following</a></li>
         <li><a href="">Answer</a></li>
         <li><a href="">Spaces</a></li>
-    </ul> <hr>
-    Adam <a href="">Follow/adam</a>
+  </ul> <hr> <div> 
+    <div><p>Adam <a href="">Follow/adam</a></p>
     <h2>What is the highest salary for a spacex engineer?</h2>
     <button>+upvote</button>
-    <button>answer</button><hr>
-    Bob <a href="">Follow/Bob</a>
+    <button>answer</button><hr></div>
+    <div><p>Bob <a href="">Follow/Bob</a></p>
     <h2>What is the syllabus for JEE 2024?</h2>
     <button>+upvote</button>
-    <button>answer</button> <hr>
-    Catlyn <a href="">Follow/catlyn</a>
+    <button>answer</button> <hr></div>
+    <p>Catlyn <a href="">Follow/catlyn</a></p>
     <h2>What is the sky blue?</h2>
     <button>+upvote</button>
     <button>answer</button><hr>
-    Dan <a href="">Follow/dan</a>
+    <p>Dan <a href="">Follow/dan</a></p>
     <h2>Suggest some good sci-fi shows?</h2>
     <button>+upvote</button>
     <button>answer</button>
@@ -66,12 +66,11 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
     h2{
       color: brown;
     }
-
-</p> -->
-<div id="main"><div id="op"></div>
+</p></div>
+<!-- <div id="main"><div id="op"></div>
 <div id="op1"></div>
  <span>hello</span>
-</div>
+</div> -->
 </body>
 </html>
 
