--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html"></a>Home</span> <span
+    <header><P><a href="https://www.google.com/">Search</a> <span style="margin-left: 2%;"><a href="index.html"></a>Home</span> <span
         style="margin-left: 2%;">Viwe</span><span style="margin-left: 2%;">Shopping</span><span
         style="margin-left: 2%;">Maps</span><span style="margin-left: 2%;">Images</span><span
         style="margin-left: 2%;"><Video></span></span></P>
+        </header>
             <hr/>
+            <main id="Aman">
 <h1> <p><span style="background-color: aqua;">Welcome to the coding world </span></p>
 </h1> <!-- Block Elements :- h1..h6 p -->
 <!--It takes full width and starts from new line -->
@@ -143,5 +145,6 @@
 <h1>CSS classes</h1>
 <p>Hello Aman</p>
 <h1 style="background-color: aqua; word-spacing: 20px;"> <i>Aman Kaise ho</i></h1>
+</main>
 </body>
 </html>
