--- a/Quora.html
+++ b/Quora.html
@@ -13,37 +13,52 @@
 <header><h1 id="Qu">Quora </h1> 
     <div id="button">
         <form action="username" id="User">
-    <input type="text" placeholder="username">
-    <input type="password" placeholder="password">
-    <button id="Login">Login</button> <button id="Signup">Sign up</button></form>
+            <input type="text" placeholder="username">
+            <input type="password" placeholder="password">
+            <button id="Login">Login</button> 
+            <button id="Signup">Sign up</button>
+        </form>
     </div>
 </header>
 <div id="navbar"> 
-    <ul class="aman">
-        <li><a href="" >Home</a></li>
-        <li><a href="">Following</a></li>
-        <li><a href="">Answer</a></li>
-        <li><a href="">Spaces</a></li>
-    </ul> 
+    <nav>
+        <ul class="aman">
+            <li><a href="" >Home</a></li>
+            <li><a href="">Following</a></li>
+            <li><a href="">Answer</a></li>
+            <li><a href="">Spaces</a></li>
+        </ul>
+    </nav>
 </div>
-  <hr> 
+  <br><hr> 
   <div> 
-    <div><p>Adam <a href="">Follow/adam</a></p>
-    <h2>What is the highest salary for a spacex engineer?</h2>
-    <button>+upvote</button>
-    <button>answer</button><hr></div>
-    <div><p>Bob <a href="">Follow/Bob</a></p>
-    <h2>What is the syllabus for JEE 2024?</h2>
-    <button>+upvote</button>
-    <button>answer</button> <hr></div>
-    <p>Catlyn <a href="">Follow/catlyn</a></p>
-    <h2>What is the sky blue?</h2>
-    <button>+upvote</button>
-    <button>answer</button><hr>
-    <p>Dan <a href="">Follow/dan</a></p>
-    <h2>Suggest some good sci-fi shows?</h2>
-    <button>+upvote</button>
-    <button>answer</button>
-    
+    <div>
+        <p>Adam <a href="">Follow/adam</a></p>
+        <h2>What is the highest salary for a spacex engineer?</h2>
+        <button>+upvote</button>
+        <button>answer</button><br>
+        <hr>
+    </div>
+    <div>
+        <p>Bob <a href="">Follow/Bob</a></p>
+        <h2>What is the syllabus for JEE 2024?</h2>
+        <button>+upvote</button>
+        <button>answer</button><br>
+        <hr>
+    </div>
+    <div>
+        <p>Catlyn <a href="">Follow/catlyn</a></p>
+        <h2>What is the sky blue?</h2>
+        <button>+upvote</button>
+        <button>answer</button><br>
+        <hr>
+    </div>
+    <div>
+        <p>Dan <a href="">Follow/dan</a></p>
+        <h2>Suggest some good sci-fi shows?</h2>
+        <button>+upvote</button>
+        <button>answer</button><br>
+        <hr>
+    </div>
 </body>
 </html>
