--- a/Practice.html
+++ b/Practice.html
@@ -11,7 +11,7 @@
  <div class="op1">
  </div> -->
     
-<!-- </div>
+</div>
 <form>
  <h1>Registraion Form</h1>
  <input type="text" placeholder="First Name"> <input type="text" placeholder="Last Name"><br>
@@ -26,7 +26,7 @@ Do you agree to all terms of service? <input type="checkbox"> Yes, I agree <br>
 <h2>Hi there!</h2>
 <p>My name is Tom & I am there to help</p>
 <button>Need Help</button>
-<h1>Cybrom</h1><hr> -->
+<h1>Cybrom</h1><hr>
 
 <br><br>
    <p> <b>Universal selector *</b><br>
