--- a/Quora.html
+++ b/Quora.html
@@ -32,28 +32,28 @@
 </div>
   <br><hr> 
   <div> 
-    <div>
+    <div id="none">
         <p>Adam <a href="">Follow/adam</a></p>
         <h2>What is the highest salary for a spacex engineer?</h2>
         <button>+upvote</button>
         <button>answer</button><br>
         <hr>
     </div>
-    <div>
+    <div id="none">
         <p>Bob <a href="">Follow/Bob</a></p>
         <h2>What is the syllabus for JEE 2024?</h2>
         <button>+upvote</button>
         <button>answer</button><br>
         <hr>
     </div>
-    <div>
+    <div id="none">
         <p>Catlyn <a href="">Follow/catlyn</a></p>
         <h2>What is the sky blue?</h2>
         <button>+upvote</button>
         <button>answer</button><br>
         <hr>
     </div>
-    <div>
+    <div id="none">
         <p>Dan <a href="">Follow/dan</a></p>
         <h2>Suggest some good sci-fi shows?</h2>
         <button>+upvote</button>
