--- a/PracticeQs.html
+++ b/PracticeQs.html
@@ -8,12 +8,19 @@
     <link rel="stylesheet" href="PracticeQs.css">
   </head>
   <body>
-    <h1 id="h1">Facebook</h1>
-    <button class="userbtn">Log in</button>
-    <button class="userbtn">Register</button>
-    <hr />
-    <label for="search">Search</label>
-    <input placeholder="search your friends" id="search" />
-    <button id="searchbtn">Search</button>
+    <div class="Card">
+      <img src="download.jpg" alt="error">
+      <div class="Source">
+        <h3>Aman Maurya</h3>
+        <p>Design engineer</p>
+      </div>
+    </div>
+    <div class="Card">
+      <img src="download.jpg" alt="error">
+      <div class="Source">
+        <h3>Aman Maurya</h3>
+        <p>Design engineer</p>
+      </div>
+    </div>
   </body>
 </html>
