--- a/Quora.html
+++ b/Quora.html
@@ -42,23 +42,40 @@
     <div id="none">
         <p>Bob <a href="">Follow/Bob</a></p>
         <h2>What is the syllabus for JEE 2024?</h2>
-        <button>+upvote</button>
-        <button>answer</button><br>
+        <button id="button">+upvote</button>
+        <button id="button">answer</button><br>
         <hr>
     </div>
     <div id="none">
         <p>Catlyn <a href="">Follow/catlyn</a></p>
         <h2>What is the sky blue?</h2>
-        <button>+upvote</button>
-        <button>answer</button><br>
+        <button id="button">+upvote</button>
+        <button id="button">answer</button><br>
         <hr>
     </div>
     <div id="none">
         <p>Dan <a href="">Follow/dan</a></p>
         <h2>Suggest some good sci-fi shows?</h2>
-        <button>+upvote</button>
-        <button>answer</button><br>
+        <button id="button">+upvote</button>
+        <button id="button">answer</button><br>
         <hr>
+    </div>
+    <div class="Card">
+        <img src="Aman Maurya.jpg" alt="error">
+        <div class="resource">
+            <h3>Aman Maurya</h3>
+            <p><h4>Occupation:-</h4>Design engineer</p>
+            <p><h4>Soft Skill:-</h4></p>
+        </div>
+    </div>
+        <div class="Card">
+            <img src="Aman Maurya.jpg" alt="error">
+            <div class="resource">
+                <h3>Aman Maurya</h3>
+                <p><h4>Occupation:-</h4>Design engineer</p>
+                <p><h4>Soft Skill:-</h4></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
