--- a/PracticeQs.html
+++ b/PracticeQs.html
@@ -22,5 +22,14 @@
         <p>Design engineer</p>
       </div>
     </div>
+    <div id="outer">
+      <div id="display">
+        <div id="eye"></div>
+        <div id="eye"></div>
+      </div>
+      <div>
+        <div id="mouth"></div>
+      </div>
+    </div>
   </body>
 </html>
