--- a/Quora.html
+++ b/Quora.html
@@ -74,6 +74,8 @@
                 <h3>Aman Maurya</h3>
                 <p><h4>Occupation:-</h4>Design engineer</p>
                 <p><h4>Soft Skill:-</h4></p>
+                <P><h4>Excel</h4></P>
+                <p><h4>Python</h4></p>
             </div>
         </div>
     </div>
