--- a/Quora.html
+++ b/Quora.html
@@ -69,7 +69,7 @@
         </div>
     </div>
         <div class="Card">
-            <img src="Aman Maurya.jpg" alt="error">
+            <img src="Lucknow.jpg" alt="error">
             <div class="resource">
                 <h3>Aman Maurya</h3>
                 <p><h4>Occupation:-</h4>Design engineer</p>
